After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 781434 - (gnome-calendar:16762): Gtk-WARNING ** Failed to set text '...' from markup due to error parsing markup: Error on line 4 char 53: 'room@example.com' is not a valid name
(gnome-calendar:16762): Gtk-WARNING ** Failed to set text '...' from markup d...
Status: RESOLVED FIXED
Product: gnome-calendar
Classification: Applications
Component: User Interface
3.24.x
Other Linux
: Normal normal
: 3.26
Assigned To: GNOME Calendar maintainers
GNOME Calendar maintainers
Depends on:
Blocks:
 
 
Reported: 2017-04-18 07:09 UTC by Milan Crha
Modified: 2017-04-18 12:41 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
event-widget: escape event location (1.19 KB, patch)
2017-04-18 12:40 UTC, Georges Basile Stavracas Neto
committed Details | Review

Description Milan Crha 2017-04-18 07:09:06 UTC
This is git master at commit 3be142a.

I see on console warnings like this:

(gnome-calendar:16762): Gtk-WARNING ** Failed to set text '<b>xxxxxxx xxxx xxxxxx xxxxxxx</b>
xx/xx/xxxx, xx:xx - xx:xx

At "xxxxx - xxxxxxxxx - xxx" <room@example.com>\; "xxx xxxx - x - xxx" <room2@example.com>

xxx xxxxxxxx xx xx xxx xxxx xxxxx, xxxxx

xxxxx://xxxxxxxxxxxxxxxxxxxx/xxxx/xxxxxxxxxxxxxxxxxxxxxx' from markup due to error parsing markup: Error on line 4 char 53: 'room@example.com' is not a valid name

You might want to escape markup letters first, before passing them to that place, like with g_markup_printf_escaped(), I suppose.
Comment 1 Georges Basile Stavracas Neto 2017-04-18 12:40:20 UTC
Created attachment 349996 [details] [review]
event-widget: escape event location
Comment 2 Georges Basile Stavracas Neto 2017-04-18 12:41:41 UTC
Attachment 349996 [details] pushed as 5b44a34 - event-widget: escape event location