event-widget: escape event location

https://bugzilla.gnome.org/show_bug.cgi?id=781434